Missing Links and Spacing Fix

--- a/resources/sass/_article_content.scss
+++ b/resources/sass/_article_content.scss
@@ -152,7 +152,6 @@ html {
     font-size: 2.375rem;
     line-height: 2.875rem;
     font-weight: 600;
-    padding-bottom: 1rem;
   }
 
   h2,
